[package]
name = "stock_trading_system"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
rand = "0.8"
rand_chacha = "0.3"
prettytable = "0.10"
serde_json = "1.0" 
lapin = "1.9" 
futures = "0.3"
futures-util = "0.3"  
